[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/User_Interface_Manager.gd" type="Script" id=1]
[ext_resource path="res://Templates/GameEntities/Characters/Dummy Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Templates/UI/UI_Item_Placeholder.tscn" type="PackedScene" id=3]

[node name="User_Interface" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
item = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scene_Reset" type="Button" parent="CanvasLayer"]
margin_left = 800.0
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 596.0
text = "Reset"

[node name="Inventory_Placeholders" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true

[node name="A1" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 320 )

[node name="B1" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 320 )

[node name="C1" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 320 )

[node name="D1" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 320 )

[node name="E1" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 320 )

[node name="A2" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 368 )

[node name="B2" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 368 )

[node name="C2" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 368 )

[node name="D2" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 368 )

[node name="E2" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 368 )

[node name="A3" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 416 )

[node name="B3" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 416 )

[node name="C3" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 416 )

[node name="D3" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 416 )

[node name="E3" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 416 )

[node name="A4" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 464 )

[node name="B4" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 464 )

[node name="C4" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 464 )

[node name="D4" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 464 )

[node name="E4" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 464 )

[node name="A5" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 512 )

[node name="B5" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 512 )

[node name="C5" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 512 )

[node name="D5" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 512 )

[node name="E5" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 512 )

[node name="A6" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 32, 560 )

[node name="B6" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 80, 560 )

[node name="C6" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 560 )

[node name="D6" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 176, 560 )

[node name="E6" parent="CanvasLayer/Inventory_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 224, 560 )

[node name="Equipment_Placeholders" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true

[node name="Head" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 32 )
can_accept_anything = false
placeholder_type = 1

[node name="Chest" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 96 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 1

[node name="Right Hand" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 64, 96 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 4

[node name="Left Hand" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 192, 96 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 5

[node name="Legs" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 160 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 2

[node name="Feet" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 128, 224 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 3

[node name="Ammo" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 192, 32 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 6

[node name="R Glove" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 64, 160 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 7

[node name="L Glove" parent="CanvasLayer/Equipment_Placeholders" instance=ExtResource( 3 )]
position = Vector2( 192, 160 )
can_accept_anything = false
placeholder_type = 1
accepted_keyword = 8

[node name="Character_Inventory" type="Node2D" parent="CanvasLayer"]

[node name="Character_Equipment" type="Node2D" parent="CanvasLayer"]

[node name="FPS_Display" type="Label" parent="CanvasLayer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Fps: -1"

[node name="Parameter_Lists" type="ItemList" parent="CanvasLayer"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 450.0

[node name="Int_Changer" type="SpinBox" parent="CanvasLayer"]
visible = false
margin_left = 928.0
margin_top = 464.0
margin_right = 1002.0
margin_bottom = 488.0
min_value = -10000.0
max_value = 10000.0
[connection signal="pressed" from="CanvasLayer/Scene_Reset" to="." method="_on_Scene_Reset_pressed"]
[connection signal="item_activated" from="CanvasLayer/Parameter_Lists" to="." method="_on_Parameter_Lists_item_activated"]
[connection signal="item_selected" from="CanvasLayer/Parameter_Lists" to="." method="_on_Parameter_Lists_item_selected"]
[connection signal="mouse_exited" from="CanvasLayer/Parameter_Lists" to="." method="disable_focus"]
[connection signal="mouse_exited" from="CanvasLayer/Int_Changer" to="." method="disable_focus"]
[connection signal="value_changed" from="CanvasLayer/Int_Changer" to="." method="_on_Int_Changer_value_changed"]
